- add localization ("ar","en"). - add easy localization package. - add the code that toggles the lang. - save the lang locally & asign it bt the system lan at the first run. - fix the theme toggle problem

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  easy_localization: ^3.0.7+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
@@ -41,6 +42,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+    - assets/langs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
