--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.1.0
   gap: ^3.0.1
   get_it: ^8.0.3
   icons_launcher: ^3.0.1
   loading_animation_widget: ^1.3.0
+  readmore: ^3.0.0
   shared_preferences: ^2.5.3
 
 dev_dependencies:
